--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "ahooks": "^3.7.7",
     "antd": "^5.4.6",
     "autoprefixer": "^10.4.14",
     "d3-scale": "^4.0.2",
+    "dayjs": "^1.11.7",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
